# KWDEV

./: .env.example  .gitignore  LICENSE  PROJECT.md  README.md  docker-compose.yml  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
.cursor/: AGENTS.md  agent_output_415745.txt  internal-server-error-debugging.md  unused-src-analysis.md  unused-src-deletion-plan.md
.cursor/adr/: 0001-prompts-and-agents-data-folders.md  0001-unused-src-cleanup.md  0002-internal-server-error-handling.md  0002-script-folder-structure.md  0003-migrate-data-json-to-db.md  0003-src-tauri-500-line-cap-refactor.md  0004-company-page-karaweiss-kwcode.md  0004-terminal-agent-workspace-data-and-script.md  0005-data-json-files-are-seed-only.md  0005-prompts-inside-project-tab-with-inner-tabs.md  0006-create-idea-or-ticket-from-run-history.md  0006-project-tab-inner-order-project-files-first.md  0007-project-files-actions-rebuild-and-put-on-desktop.md  0008-rules-json-and-data-rules-only.md  0009-project-files-delete-and-delete-all.md  (+81 more)
analyze/: README.md
data/: README.md
public/: tauri-load.html
script/: README.md  next-output.mjs
src/: README.md  proxy.ts
src-tauri/: Cargo.toml  Info.plist  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: README.md  db.rs  lib.d.ts  lib.rs  main.rs
src-tauri/src/db/: constants.rs  docs_configs.rs  kv.rs  legacy.rs  milestones_ideas.rs  mod.rs  plan.rs  projects.rs  schema.rs
(+703 files in other folders)
