[package]
name = "run-prompts"
version = "0.1.0"
description = "App to control run_prompts_all_projects.sh"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
url = "2"
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol", "tauri/protocol-asset"]
